fixed navbar spacing

--- a/site/src/index.css
+++ b/site/src/index.css
@@ -31,53 +31,33 @@ code {
 }
 
 .menu-bar-item-row {
-  /* position: absolute;
-  right: 0;
-  top: 50px;
-  width: 500px;
-  display: inline-block; */
-  
   position: absolute;
-  right: 0px;
+  right: -70px;
+  top: 10px;
+  width: 500px;  
 }
 
 .menu-bar-item {
-  display: inline-block;
-  position: absolute;
-  margin: 20px;
   font-size: 28px;
   cursor: pointer;
   text-decoration: none;
   color: var(--black);
-  left: 0;
 }
 
 .menu-bar-item-container {
   display: inline-block;
-  height: 100px;
-  align-items: center;
-  width: 135px;
-  position: relative;
-  /* display: inline-block;
-  width: 150px;
-  height: 75px; */
-  
-}
-
-.menu-bar-image-container {
-  display: inline-block;
-  position: relative;
-  height: 100px;
-  width: 50px;
+  padding: 15px;
+  position: relative; 
 }
 
 .menu-bar-item:hover {
-  font-size: 34px;
   text-decoration: underline;
-
 }
 
 .icon {
-  position: absolute;
-  top: 30px;
+  padding-bottom: 2px;
+}
+
+.icon:hover {
+  border-bottom: 3px solid black;
 }
